Add recipe pages to the homepage
This commit adds recipe pages "Burger Recipe" and "Doughnut Recipe" to the homepage.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <p><a href="./recipes/burger.html">Burger Recipe</a></p>
+    <p><a href="./recipes/doughnut.html">Doughnut Recipe</a></p>
   </body>
 </html>
