Add recipe page content for doughnut
this commit added an image of the finished doughnut
an unordered list of ingredients and
and an ordered list of steps to take

--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/burger.html">Burger Recipe</a></p>
-    <p><a href="./recipes/doughnut.html">Doughnut Recipe</a></p>
+    <p>
+      <img
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8285701.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        height="100"
+        width="100"
+        alt="an image of a well layered turkey burger sandwich"
+      />
+      <a href="./recipes/burger.html">Burger Recipe</a>
+    </p>
+    <p>
+      <img
+        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9437739.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+        width="100"
+        height="100"
+        alt="an image of doughnuts on a white plate"
+      />
+      <a href="./recipes/doughnut.html">Doughnut Recipe</a>
+    </p>
   </body>
 </html>
