--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -6,5 +6,76 @@
   </head>
   <body>
     <h1>Doughnuts Recipe</h1>
+    <img
+      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9437739.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+      width="310"
+      height="310"
+      alt="an image of doughnuts on a white plate"
+    />
+    <h2>How to make Doughnuts</h2>
+    <p>
+      Indulge in delicious homemade doughnuts anytime with this easy-to-follow
+      recipe. You'll find the full recipe below with step-by-step instructions,
+      but here's what you can expect when you make this top-rated recipe: Start
+      by sprinkling yeast over warm water to activate, then add flour, sugar,
+      salt, milk, shortening, and eggs to create the dough. Knead the dough
+      until smooth, cover it, and allow it to rise until doubled in size. Roll
+      the dough out to a ½ inch thickness before using a doughnut cutter to
+      create a shape. Let the doughnuts rise a second time before deep-frying
+      and glazing.
+    </p>
+    <h3>Ingredients:</h3>
+    <ul>
+      <li>2 (.25 ounce) envelopes active dry yeast</li>
+      <li>¼ cup warm water (105 to 115 degrees)</li>
+      <li>1 ½ cups lukewarm milk</li>
+      <li>1 teaspoon salt</li>
+      <li>2 eggs</li>
+      <li>⅓ cup shortening</li>
+      <li>5 cups all-purpose flour</li>
+      <li>1 quart vegetable oil for frying</li>
+      <li>⅓ cup butter</li>
+      <li>2 cups confectioners' sugar</li>
+      <li>1 ½ teaspoons vanilla</li>
+      <li>4 tablespoons hot water or as needed</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+      <li>
+        Sprinkle the yeast over the warm water, and let stand for 5 minutes, or
+        until foamy.
+      </li>
+      <li>
+        In a large bowl, mix together the yeast mixture, milk, sugar, salt,
+        eggs, shortening, and 2 cups of the flour. Mix for a few minutes at low
+        speed, or stirring with a wooden spoon. Beat in remaining flour 1/2 cup
+        at a time, until the dough no longer sticks to the bowl. Knead for about
+        5 minutes, or until smooth and elastic. Place the dough into a greased
+        bowl, and cover. Set in a warm place to rise until double. Dough is
+        ready if you touch it, and the indention remains.
+      </li>
+      <li>
+        Turn the dough out onto a floured surface, and gently roll out to 1/2
+        inch thickness. Cut with a floured doughnut cutter. Let doughnuts sit
+        out to rise again until double. Cover loosely with a cloth.
+      </li>
+      <li>
+        Melt butter in a saucepan over medium heat. Stir in confectioners' sugar
+        and vanilla until smooth. Remove from heat, and stir in hot water one
+        tablespoon at a time until the icing is somewhat thin, but not watery.
+        Set aside.
+      </li>
+      <li>
+        Heat oil in a deep-fryer or large heavy skillet to 350 degrees F (175
+        degrees C). Slide doughnuts into the hot oil using a wide spatula. Turn
+        doughnuts over as they rise to the surface. Fry doughnuts on each side
+        until golden brown. Remove from hot oil, to drain on a wire rack. Dip
+        doughnuts into the glaze while still hot, and set onto wire racks to
+        drain off excess. Keep a cookie sheet or tray under racks for easier
+        clean up.
+      </li>
+      <li>Enjoy!</li>
+    </ol>
+    <p><a href="../index.html">Go to back home</a></p>
   </body>
 </html>
