Add more recipes - burger recipe
this commit adds an additional recipe - burger recipe
this includes and image of a finished burger
an unordered list of all the ingredients and
an ordered list of all the steps taken in preparing the dish

--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <p>
-      <img
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8285701.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
-        height="100"
-        width="100"
-        alt="an image of a well layered turkey burger sandwich"
-      />
-      <a href="./recipes/burger.html">Burger Recipe</a>
-    </p>
-    <p>
-      <img
-        src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9437739.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
-        width="100"
-        height="100"
-        alt="an image of doughnuts on a white plate"
-      />
-      <a href="./recipes/doughnut.html">Doughnut Recipe</a>
-    </p>
+    <ul>
+      <li>
+        <img
+          src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
+          height="100"
+          width="100"
+          alt="an image of a well layered turkey burger sandwich"
+        />
+        <a href="./recipes/burger.html">Burger Recipe</a>
+      </li>
+      <li>
+        <img
+          src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
+          width="100"
+          height="100"
+          alt="an image of doughnuts on a plate"
+        />
+        <a href="./recipes/doughnut.html">Doughnut Recipe</a>
+      </li>
+    </ul>
   </body>
 </html>
