--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -6,5 +6,48 @@
   </head>
   <body>
     <h1>Burger Recipe</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
+      height="310"
+      width="310"
+      alt="an image of a well layered turkey burger sandwich"
+    />
+    <h2>How to Make Turkey Burgers</h2>
+    <p>
+      The good news is that making turkey burgers from scratch is quite easy.
+      All you need is ground turkey, onion, bread crumbs, eggs, and some
+      seasonings and you're good to go. Simply combine your ground turkey, diced
+      onion, bread crumbs, egg whites, garlic, parsley, salt, and ground pepper
+      in a bowl. We recommend sticking with ground turkey that's about 93% lean
+      or less — any leaner than that and your burger might fall apart. Form the
+      ground turkey mixture into patties and cook the burgers using your
+      preferred method.
+    </p>
+    <h3>Ingredients:</h3>
+    <ul>
+      <li>3 pounds ground turkey</li>
+      <li>¼ cup seasoned bread crumbs</li>
+      <li>¼ cup finely diced onion</li>
+      <li>2 egg whites, lightly beaten</li>
+      <li>¼ cup chopped fresh parsley</li>
+      <li>1 clove garlic, peeled and minced</li>
+      <li>1 teaspoon salt</li>
+      <li>¼ teaspoon ground black pepper</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>
+        Mix ground turkey, seasoned bread crumbs, onion, egg whites, parsley,
+        garlic, salt, and pepper together in a large bowl.
+      </li>
+      <li>Form into 12 patties.</li>
+      <li>
+        Cook the patties in a medium skillet over medium heat, turning once, to
+        an internal temperature of 180 degrees F (85 degrees C).
+      </li>
+      <li>Serve hot and enjoy!</li>
+    </ol>
+    <p><a href="../index.html">Go back to home</a></p>
   </body>
 </html>
