Add more recipes - cookie recipe
this commit adds an additional recipe - cookie recipe
this includes and image of a finished cookies
an unordered list of all the ingredients and
an ordered list of all the steps taken in preparing the dish

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         />
         <a href="./recipes/doughnut.html">Doughnut Recipe</a>
       </li>
+      <li>
+        <img
+          src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
+          height="100"
+          width="100"
+          alt="an image of cookies on an oven wire rack"
+        />
+        <a href="./recipes/cookier.html">Cookies Recipe</a>
+      </li>
     </ul>
   </body>
 </html>
