--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Doughnuts Recipe</h1>
     <img
-      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9437739.jpg&q=60&c=sc&orient=true&poi=auto&h=512"
+      src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
       width="310"
       height="310"
       alt="an image of doughnuts on a white plate"
