Fix href link to the cookie recipe page from the homepage
this commit fixes the href link to the cookie recipe page from the homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           width="100"
           alt="an image of cookies on an oven wire rack"
         />
-        <a href="./recipes/cookier.html">Cookies Recipe</a>
+        <a href="./recipes/cookie.html">Cookies Recipe</a>
       </li>
     </ul>
   </body>
