Add minor CSS to the webpages
commit adds background-color, color, font-family and font-size to the website

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Burger Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Burger Recipe</h1>
+    <h1 class="main-head">Burger Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
       height="310"
-      width="310"
+      width="auto"
       alt="an image of a well layered turkey burger sandwich"
     />
-    <h2>How to Make Turkey Burgers</h2>
+    <h2 class="sub-heading">How to Make Turkey Burgers</h2>
     <p>
       The good news is that making turkey burgers from scratch is quite easy.
       All you need is ground turkey, onion, bread crumbs, eggs, and some
@@ -23,7 +24,7 @@
       ground turkey mixture into patties and cook the burgers using your
       preferred method.
     </p>
-    <h3>Ingredients:</h3>
+    <h3 class="mini-heading">Ingredients:</h3>
     <ul>
       <li>3 pounds ground turkey</li>
       <li>¼ cup seasoned bread crumbs</li>
@@ -34,7 +35,7 @@
       <li>1 teaspoon salt</li>
       <li>¼ teaspoon ground black pepper</li>
     </ul>
-    <h3>Steps:</h3>
+    <h3 class="mini-heading">Steps:</h3>
     <ol>
       <li>Gather all ingredients.</li>
       <li>
@@ -48,6 +49,6 @@
       </li>
       <li>Serve hot and enjoy!</li>
     </ol>
-    <p><a href="../index.html">Go back to home</a></p>
+    <p><a href="../index.html" class="link-text">Go back to home</a></p>
   </body>
 </html>
