--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -3,23 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>Cookies Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Cookies Recipe</h1>
+    <h1 class="main-head">Cookies Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
       height="310"
-      width="310"
+      width="auto"
       alt="an image of cookies on an oven wire rack"
     />
-    <h2>How to make Granola Oatmeal Cookies</h2>
+    <h2 class="sub-heading">How to make Granola Oatmeal Cookies</h2>
     <p>
       There is no less interesting cookie to me than a plain oatmeal cookie but
       if you are making them with granola they turn from mundane to magnificent.
       This cookie is so far superior in both taste and texture to regular
       oatmeal cookies that it might just be the best cookie.
     </p>
-    <h3>Ingredients:</h3>
+    <h3 class="mini-heading">Ingredients:</h3>
     <ul>
       <li>1 cup finely crumbled prepared granola</li>
       <li>¾ cup all-purpose flour</li>
@@ -34,7 +35,7 @@
       <li>¼ teaspoon ground cinnamon</li>
       <li>½ cup old-fashioned rolled oats</li>
     </ul>
-    <h3>Steps:</h3>
+    <h3 class="mini-heading">Steps:</h3>
     <ul>
       <li>
         Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
@@ -76,6 +77,6 @@
       </li>
       <li>Serve and enjoy!</li>
     </ul>
-    <p><a href="../index.html">Go back to home</a></p>
+    <p><a href="../index.html" class="link-text">Go back to home</a></p>
   </body>
 </html>
