--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Doughnuts Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Doughnuts Recipe</h1>
+    <h1 class="main-head">Doughnuts Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
-      width="310"
+      width="auto"
       height="310"
       alt="an image of doughnuts on a white plate"
     />
-    <h2>How to make Doughnuts</h2>
+    <h2 class="sub-heading">How to make Doughnuts</h2>
     <p>
       Indulge in delicious homemade doughnuts anytime with this easy-to-follow
       recipe. You'll find the full recipe below with step-by-step instructions,
@@ -24,7 +25,7 @@
       create a shape. Let the doughnuts rise a second time before deep-frying
       and glazing.
     </p>
-    <h3>Ingredients:</h3>
+    <h3 class="mini-heading">Ingredients:</h3>
     <ul>
       <li>2 (.25 ounce) envelopes active dry yeast</li>
       <li>¼ cup warm water (105 to 115 degrees)</li>
@@ -39,7 +40,7 @@
       <li>1 ½ teaspoons vanilla</li>
       <li>4 tablespoons hot water or as needed</li>
     </ul>
-    <h3>Steps:</h3>
+    <h3 class="mini-heading">Steps:</h3>
     <ol>
       <li>
         Sprinkle the yeast over the warm water, and let stand for 5 minutes, or
@@ -76,6 +77,6 @@
       </li>
       <li>Enjoy!</li>
     </ol>
-    <p><a href="../index.html">Go to back home</a></p>
+    <p><a href="../index.html" class="link-text">Go to back home</a></p>
   </body>
 </html>
