Move image styling from html element to styles.css
refactored code and moved all image related styling to the css file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
       <li>
         <img
           src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
-          height="auto"
-          width="100"
+          class="home-image"
           alt="an image of a well layered turkey burger sandwich"
         />
         <a href="./recipes/burger.html" class="link-text">Burger Recipe</a>
@@ -20,8 +19,7 @@
       <li>
         <img
           src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
-          width="100"
-          height="auto"
+          class="home-image"
           alt="an image of doughnuts on a plate"
         />
         <a href="./recipes/doughnut.html" class="link-text">Doughnut Recipe</a>
@@ -29,8 +27,7 @@
       <li>
         <img
           src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
-          height="auto"
-          width="100"
+          class="home-image"
           alt="an image of cookies on an oven wire rack"
         />
         <a href="./recipes/cookie.html" class="link-text">Cookies Recipe</a>
