--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -9,8 +9,7 @@
     <h1 class="main-head">Burger Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
-      height="310"
-      width="auto"
+      class="main-image"
       alt="an image of a well layered turkey burger sandwich"
     />
     <h2 class="sub-heading">How to Make Turkey Burgers</h2>
