--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -9,8 +9,7 @@
     <h1 class="main-head">Doughnuts Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
-      width="auto"
-      height="310"
+      class="main-image"
       alt="an image of doughnuts on a white plate"
     />
     <h2 class="sub-heading">How to make Doughnuts</h2>
