--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -9,8 +9,7 @@
     <h1 class="main-head">Cookies Recipe</h1>
     <img
       src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
-      height="310"
-      width="auto"
+      class="main-image"
       alt="an image of cookies on an oven wire rack"
     />
     <h2 class="sub-heading">How to make Granola Oatmeal Cookies</h2>
