Style webpages with color and adjust layout
adjusted the webpages layout using margin, padding and a little bit of color

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -48,6 +48,10 @@
       </li>
       <li>Serve hot and enjoy!</li>
     </ol>
-    <p><a href="../index.html" class="link-text">Go back to home</a></p>
+    <div class="center-btn">
+      <div class="btn-one">
+        <a href="../index.html" class="btn-one-text">Go back to home</a>
+      </div>
+    </div>
   </body>
 </html>
