--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -35,7 +35,7 @@
       <li>½ cup old-fashioned rolled oats</li>
     </ul>
     <h3 class="mini-heading">Steps:</h3>
-    <ul>
+    <ol>
       <li>
         Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees
         C). Line a baking sheet with a silicone baking mat (such as Silpat™) or
@@ -75,7 +75,11 @@
         dough.
       </li>
       <li>Serve and enjoy!</li>
-    </ul>
-    <p><a href="../index.html" class="link-text">Go back to home</a></p>
+    </ol>
+    <div class="center-btn">
+      <div class="btn-one">
+        <a href="../index.html" class="btn-one-text">Go back to home</a>
+      </div>
+    </div>
   </body>
 </html>
