--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -76,6 +76,10 @@
       </li>
       <li>Enjoy!</li>
     </ol>
-    <p><a href="../index.html" class="link-text">Go to back home</a></p>
+    <div class="center-btn">
+      <div class="btn-one">
+        <a href="../index.html" class="btn-one-text">Go to back home</a>
+      </div>
+    </div>
   </body>
 </html>
