--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1 class="main-head">Odin Recipes</h1>
     <ul>
-      <li>
+      <li class="home-list">
         <img
           src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
           class="home-image"
@@ -16,7 +16,7 @@
         />
         <a href="./recipes/burger.html" class="link-text">Burger Recipe</a>
       </li>
-      <li>
+      <li class="home-list">
         <img
           src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
           class="home-image"
@@ -24,7 +24,7 @@
         />
         <a href="./recipes/doughnut.html" class="link-text">Doughnut Recipe</a>
       </li>
-      <li>
+      <li class="home-list">
         <img
           src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
           class="home-image"
