center image on recipe page
centers all image using display: flex and justify-content: center

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <h1 class="main-head">Burger Recipe</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
-      class="main-image"
-      alt="an image of a well layered turkey burger sandwich"
-    />
+    <div class="image-container">
+      <img
+        src="https://www.allrecipes.com/thmb/xLsa27jo5AaRi5Gb4uRpm3AvhuI=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/39748-actually-delicious-turkey-burgers-DDMFS-4x3-5b5996b0ff0b4590b7171592591cca96.jpg"
+        class="main-image"
+        alt="an image of a well layered turkey burger sandwich"
+      />
+    </div>
     <h2 class="sub-heading">How to Make Turkey Burgers</h2>
-    <p>
+    <p class="description">
       The good news is that making turkey burgers from scratch is quite easy.
       All you need is ground turkey, onion, bread crumbs, eggs, and some
       seasonings and you're good to go. Simply combine your ground turkey, diced
