--- a/recipes/doughnut.html
+++ b/recipes/doughnut.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <h1 class="main-head">Doughnuts Recipe</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
-      class="main-image"
-      alt="an image of doughnuts on a white plate"
-    />
+    <div class="image-container">
+      <img
+        src="https://www.allrecipes.com/thmb/2XXxgrPzL_dcEwl6zQWM_xI94Iw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/45921-crispy-and-creamy-doughnuts-DDMFS-4x3-4266734872014eeebaeddbe56452e18d.jpg"
+        class="main-image"
+        alt="an image of doughnuts on a white plate"
+      />
+    </div>
     <h2 class="sub-heading">How to make Doughnuts</h2>
-    <p>
+    <p class="description">
       Indulge in delicious homemade doughnuts anytime with this easy-to-follow
       recipe. You'll find the full recipe below with step-by-step instructions,
       but here's what you can expect when you make this top-rated recipe: Start
