--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <h1 class="main-head">Cookies Recipe</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
-      class="main-image"
-      alt="an image of cookies on an oven wire rack"
-    />
+    <div class="image-container">
+      <img
+        src="https://www.allrecipes.com/thmb/B22qcE4VSwQWYCbOLs4rL3hzkGs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8489191-granola-oatmeal-cookies-VAT-4x3-14aeab2b8e4b4cd3b299173fdee0ccbb.jpg"
+        class="main-image"
+        alt="an image of cookies on an oven wire rack"
+      />
+    </div>
     <h2 class="sub-heading">How to make Granola Oatmeal Cookies</h2>
-    <p>
+    <p class="description">
       There is no less interesting cookie to me than a plain oatmeal cookie but
       if you are making them with granola they turn from mundane to magnificent.
       This cookie is so far superior in both taste and texture to regular
